fix and simplify things